<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_details"
    tools:context=".view.activities.Details">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/harry_potter_font"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="100dp"
                    tools:text="Title" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivImage"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:riv_corner_radius="10dp"
                    tools:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tvNameActor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="30dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/actor_name"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvNameActorValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvAlternativeNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="30dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/alternativeNames"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvAlternativeNamesValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="Description" />


                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="30dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/gender"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvGenderValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvHouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="30dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/house"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvHouseValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvPatronus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="30dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/patronus"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvPatronusValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvWizzard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="30dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/wizzard"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvWizzardValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvYearOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="30dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/anioNacimiento"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="25sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tvYearOfBirthValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="Description" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pbConexion"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminateDrawable="@drawable/progress_anim"
        android:indeterminateDuration="1500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>